Make navbar behave same with all pages and prevent overlapping

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@
 .palace-content{
   margin: auto;
   margin-top: 4rem;
-  /* z-index: -1; */
+  z-index: -1;
 }
   @media only screen and (max-width: 600px) {
     .carousel{
@@ -131,7 +131,7 @@
       margin-top: 2rem;
       margin-top: 4rem;
      flex-direction: column;
-      /* z-index: -1; */
+      z-index: -1; 
       display: flex;
       align-items: center;
       align-content: space-around;
